--- a/basics/static/basics/css/styles.css
+++ b/basics/static/basics/css/styles.css
@@ -1,7 +1,7 @@
 .mdl-grid {
 	position: absolute;
-	height: 100%;
-	width: 100%;
+	height: 50%;
+	width: 50%;
 	padding: 0;
 }
 
@@ -88,14 +88,6 @@
 	background-color: rgb(68,138,255);
 }
 
-#add-chat-button {
-	position: fixed;
-	bottom: 2rem;
-	right: 2rem;
-	z-index: 100;
-	visibility: hidden;
-}
-
 .clearfix:after {
 	visibility: hidden;
 	display: block;
@@ -119,12 +111,16 @@
 }
 
 /* Small devices (tablets, 768px and up) */
-@media (min-width: 768px) {
+@media (min-width: 1px) {
+		.button-container {
+		display: block;
+	}
 	.mdl-grid {
 		position: absolute;
 		height: calc(60% - 16px);
-		width: calc(50% - 16px);
+		width: calc(90% - 16px);
 		padding: 8px;
+		overflow-y: auto;
 	}
 
 	.chat-box {
@@ -136,17 +132,6 @@
 	}
 
 	.mdl-cell--4-col, .mdl-cell--4-col-phone.mdl-cell--4-col-phone {
-		width: calc(33.33333333% - 16px);
-	}
-}
-
-/* Medium devices (desktops, 992px and up) */
-@media (min-width: 992px) {
-}
-
-/* Large devices (large desktops, 1200px and up) */
-@media (min-width: 1200px) {
-	.button-container {
-		display: block;
+		width: calc(73.33333333% - 16px);
 	}
 }
