--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -1,15 +1,20 @@
 {% extends 'administration/base_admin.html' %}
 {% block content %}
 
-        <div class="modal-dialog" id="sign-up">
+<div class="row">
+
+    <!-- first column -->
+    <div class="col-sm-5 col-sm-push-7">
+
+    <!-- create new group -->
+    <div id="standard-modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="text-center">create new Group</h1>
+                <h2 class="text-center" id="standard-modal-headline">Create new Group</h2>
             </div>
             <div class="modal-body">
                 <form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
                     {%csrf_token%}
-                    <p style="font-size:160%;"> description <p\>
                     {% if messages %}
                         {% for message in messages %}
                             {% if message.message == 'wrong_group' %}
@@ -61,37 +66,44 @@
                         <input type="email" class="form-control input-lg" placeholder="Email from Group User" name="email" required/>
                     </div>
                     <div class="form-group">
-                        <input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
+                        <input type="submit" class="btn btn-block btn-lg btn-primary" value="Create"/>
                     </div>
                 </form>
             </div>
         </div>
-    </div>
+    </div><!-- end create new group -->
 
-		<div class="container">
-            <table class = "table table-hover">
-                <thead>
-                    <tr>
-                        <th>Groupname</th>
-                        <th>E-Mail</th>
-                        <th></th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% if user.is_superuser %}
-                        {% for group in groups %}
-                            <tr>
-                                <th>{{ group.group.name }}</th>
-                                <th>{{ group.email }}</th>
-                                <th>
-                                    <a href="{% url 'administration:group_delete' pk=group.pk %}" class="btn btn-danger btn-sm" title="delete">
-                                        <span class="glyphicon glyphicon-remove"></span>
-                                    </a>
-                                </th>
-                            </tr>
-                        {% endfor %}
-                    {% endif %}
-                 </tbody>
-            </table>
+</div><!-- end first column -->
+
+<!-- second column -->
+<div class="col-sm-7 col-sm-pull-5">
+
+    <!-- all groups -->
+    <div id="standard-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="text-center" id="standard-modal-headline">Groups</h2>
+            </div>
+            <div class="modal-body">
+                <div class="list-group">
+                    {% for group in groups %}
+                        <div class="list-group-item" id="standard-list-group-item-div">
+                            <div class="row">
+                                <div class="col-sm-10">
+                                    {{ group.group.name }}
+                                </div>
+                                <div class="col-sm-2">
+                                    <a id="standard-green-button-light" class="btn btn-default btn-sml" href="{% url 'administration:group_delete' pk=group.pk %}" title="Delete Group" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
+    </div><!-- end all groups -->
+
+</div><!-- end second column -->
+
+</div><!-- end row -->
 {% endblock %}
