--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -38,6 +38,12 @@
 		#content {
 			margin-bottom: 170px;
 		}
+	.event-list > li > time {
+		background-color: rgb(112, 149, 44);
+	}
+	.event-list > li:nth-child(even) > time {
+		background-color: rgb(93, 95, 91);
+	}
 
 	</style>
 
