--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -112,7 +112,7 @@
           'button',
           {
             onClick: props.handleClick,
-            className: 'mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent',
+            className: 'btn btn-primary',
             type: 'submit' },
           props.buttonText
         )
