integrated search bar with error messages in user-lists; change css login buttons to standard buttons

--- a/administration/templates/administration/categories.html
+++ b/administration/templates/administration/categories.html
@@ -24,13 +24,13 @@
 							{% endif %}
     					{% endfor %}
 					{% endif %}
-				    <form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
+				    <form class="form" role="form" method="post" accept-charset="UTF-8">
 					{%csrf_token%}
 					    <div class="form-group">
 		  				    <input type="name" class="form-control input-lg" placeholder="Categorie Name" name="name" required/>
 		  			    </div>
 					    <div class="form-group">
-						    <input id="standard-green-button" type="submit" class="btn btn-block btn-lg btn-primary" value="Create"/>
+						    <input id="standard-green-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Create"/>
 					    </div>
 				    </form>
 			    </div>
