--- a/administration/templates/administration/users.html
+++ b/administration/templates/administration/users.html
@@ -1,88 +1,87 @@
 {% extends 'administration/base_admin.html' %}
 {% block content %}
 
-    <div id="standard-modal">
-        <div class="modal-content">
-            <form class="form" role="form" method="post" accept-charset="UTF-8" id="login-nav">
-                    {%csrf_token%}
-            <div class="modal-header">
-                <h2 class="text-center" id="standard-modal-headline">Search User</h2>
-            </div>
-            {% if messages %}
-                {% for message in messages %}
-                    {% if message.message == 'user_isAdmin' %}
-                        <div class="form-group">
-                            <div class="error-messages">
-                                <p>That user is an Admin!</p>
-                            </div>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
-            {% if messages %}
-                {% for message in messages %}
-                    {% if message.message == 'wrong_email' %}
-                        <div class="form-group">
-                            <div class="error-messages">
-                                <p>User with this E-Mail doesn't exist!</p>
-                            </div>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
-            {% if usr %}
-                <div class="list-group-item" id="standard-list-group-item-div">
-                    <div class="row">
-                        <div class="col-sm-9">
-                            {{ usr.email }}
-                        </div>
-                        <div class="col-sm-3">
-                            <a id="standard-green-button-light" class="btn btn-default btn-sml" href="{% url 'administration:user_delete' pk=user.pk %}" title="Delete User" style="margin: 2px; float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
-                            <a id="standard-green-button-light" class="btn btn-default btn-sml" href="{% url 'administration:make_admin' pk=user.pk %}" title="Set User as Admin" style="margin: 2px; float: right;"><span class="glyphicon glyphicon-sunglasses"></span> Admin</a>
-                        </div>
-                    </div>
-                </div>
-            {% endif %}
-            <div class="modal-body">
-                <div class="list-group">
-                    <div class="form-group">
-                        <input type="email" class="form-control input-lg" placeholder="Email from User" name="email" required/>
-                    </div>
-
-                    <div class="form-group">
-                        <input type="submit" class="btn btn-block btn-lg btn-primary" value="Create & Send"/>
-                    </div>
-                </div>
-            </div>
-        </form>
-        </div>
-    </div>
-
     <!-- all users -->
     <div id="standard-modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="text-center" id="standard-modal-headline">Normal Users</h2>
-            </div>
-            <div class="modal-body">
-                <div class="list-group">
-                    {% for user in users %}
-                        {% if not user.is_superuser %}
-                            <div class="list-group-item" id="standard-list-group-item-div">
+                <div class="row">
+                    <div class="col-sm-6">
+                        <h2 class="text-center" id="standard-modal-headline">Normal Users</h2>
+                    </div>
+                    <!-- search bar -->
+                    <div class="col-sm-6">
+                        <form class="form" role="form" method="post" accept-charset="UTF-8">
+                        {%csrf_token%}
+                            <div class="form-group">
+                                {% if messages %}
+                                    {% for message in messages %}
+                                        {% if message.message == 'user_isAdmin' %}
+                                            <div class="row">
+                                                <div class="col-sm-12">
+                                                    <div class="error-messages" style="margin-top: 10px;">
+                                                        <p>That user is an Admin!</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        {% elif message.message == 'wrong_email' %}
+                                            <div class="row">
+                                                <div class="col-sm-12">
+                                                    <div class="error-messages" style="margin-top: 10px;">
+                                                        <p>User with this E-Mail doesn't exist!</p>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        {% endif %}
+                                    {% endfor %}
+                                {% endif %}
                                 <div class="row">
-                                    <div class="col-sm-9">
-                                        {{ user.email }}
+                                    <div class="col-sm-8">
+                                        <input type="email" class="form-control input-lg" placeholder="Email from User" name="email" style="margin-top: 15px; margin-bottom: 15px;" required/>
                                     </div>
-                                    <div class="col-sm-3">
-                                        <a id="standard-green-button-light" class="btn btn-default btn-sml" href="{% url 'administration:user_delete' pk=user.pk %}" title="Delete User" style="margin: 2px; float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
-                                        <a id="standard-green-button-light" class="btn btn-default btn-sml" href="{% url 'administration:make_admin' pk=user.pk %}" title="Set User as Admin" style="margin: 2px; float: right;"><span class="glyphicon glyphicon-sunglasses"></span> Admin</a>
+                                    <div class="col-sm-4">
+                                        <input id="standard-green-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" style="margin-top: 15px;" value="Search"/>
                                     </div>
                                 </div>
                             </div>
-                        {% endif %}
-                    {% endfor %}
+                        </form>
+                    </div><!-- end search bar -->
                 </div>
             </div>
+            <!-- list all or only one user -->
+            <div class="modal-body">
+                <div class="list-group">
+                    {% if usr %}
+                        <div class="list-group-item" id="standard-list-group-item-div">
+                            <div class="row">
+                                <div class="col-sm-9">
+                                    {{ usr.email }}
+                                </div>
+                                <div class="col-sm-3">
+                                    <a id="standard-green-button-light" class="btn btn-default btn-sml" href="{% url 'administration:user_delete' pk=user.pk %}" title="Delete User" style="margin: 2px; float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+                                    <a id="standard-green-button-light" class="btn btn-default btn-sml" href="{% url 'administration:make_admin' pk=user.pk %}" title="Set User as Admin" style="margin: 2px; float: right;"><span class="glyphicon glyphicon-sunglasses"></span> Admin</a>
+                                </div>
+                            </div>
+                        </div>
+                    {% else %}
+                        {% for user in users %}
+                            {% if not user.is_superuser %}
+                                <div class="list-group-item" id="standard-list-group-item-div">
+                                    <div class="row">
+                                        <div class="col-sm-9">
+                                            {{ user.email }}
+                                        </div>
+                                        <div class="col-sm-3">
+                                            <a id="standard-green-button-light" class="btn btn-default btn-sml" href="{% url 'administration:user_delete' pk=user.pk %}" title="Delete User" style="margin: 2px; float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+                                            <a id="standard-green-button-light" class="btn btn-default btn-sml" href="{% url 'administration:make_admin' pk=user.pk %}" title="Set User as Admin" style="margin: 2px; float: right;"><span class="glyphicon glyphicon-sunglasses"></span> Admin</a>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        {% endfor %}
+                    {% endif %}
+                </div>
+            </div><!-- end list all or only one user -->
         </div>
     </div><!-- end all users -->
 
