added saving of chat_messages and loading them when chat opens

--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -238,10 +238,11 @@
 
 
     getInitialState: function getInitialState() {
+      console.log({{messages|safe}})
       return {
         channel: '{{roomname}}'||'Actofgoods',
         connected: false,
-        messages: [],
+        messages: {{messages|safe}},
         author: ''
       };
     },
