filter needs_all by category and cards_per_page

--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -33,7 +33,24 @@
     <script src="https://fb.me/react-dom-15.0.2.js"></script>
   </head>
   <body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
-    
+    <div class="col-xs-3">
+      <div class="card card-block">
+        <h4 class="card-title">Card title</h4>
+
+          {% for room in rooms%}
+
+          <div class="row">
+            <div class="col-sm-12">
+                <div class="card card-block">
+                  <h3 class="card-title">Special title</h3>
+                  <p class="card-text">With supportin</p>
+                  <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+          </div>
+          {% endfor %}
+      </div>
+    </div>
     <div id="app"></div>
     <script src="https://code.getmdl.io/1.1.3/material.min.js"></script>
     <script>
