--- a/basics/templates/basics/needs_all.html
+++ b/basics/templates/basics/needs_all.html
@@ -19,41 +19,44 @@
 
   </div>
   -->
-    <div class="btn-group">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Range <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">5 km</a></li>
-        <li><a href="#">10 km</a></li>
-        <li><a href="#">20 km</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">100 km</a></li>
-      </ul>
-    </div>
-    <div class="btn-group">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Category <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="{% url 'basics:needs_all' %}">All</a></li>
-        {%for c in categorie%}
-          <li><a href="#">{{c.name}}</a></li>
-        {%endfor%}
-      </ul>
-    </div>
-    <div class="btn-group pull-right">
-      <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Cards per Page <span class="caret"></span>
-      </button>
-      <ul class="dropdown-menu">
-        <li><a href="#">10</a></li>
-        <li><a href="#">25</a></li>
-        <li><a href="#">50</a></li>
-        <li role="separator" class="divider"></li>
-        <li><a href="#">All</a></li>
-      </ul>
-    </div>
+    <form action="{% url 'basics:needs_all'%}" method="post">
+      {%csrf_token%}
+      <div class="btn-group">
+        <select name="range" class="selectpicker" title="{{range}}">
+          <option>5km</option>
+          <option>20km</option>
+          <option>40km</option>
+        </select>
+        <select name="category" class="selectpicker" title="{{category}}">
+          {%for c in categorie%}
+          <option>{{c.name}}</option>
+          {% endfor %}
+        </select>
+      </div>
+      <div class="btn-group pull-right">
+         <button type="submit" class="btn btn-success">Refresh</button>
+      </div>
+      <div class="btn-group pull-right">
+        <div class="btn-group">
+          <select name="cards_per_page" title="{{cards_per_page}}" class="selectpicker">
+            <option>1</option>
+            <option>5</option>
+            <option>10</option>
+          </select>
+        </div>
+
+      </div>
+    </form>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">
+
+    <!-- Latest compiled and minified JavaScript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/js/bootstrap-select.min.js"></script>
+    <script>
+      $('.selectpicker').selectpicker({
+        style: 'btn-info',
+        size: 4
+      });
+    </script>
   </div>
 </div>
 <br>
