changed the button color from sign up into gray; fixed the issue on choose location

--- a/basics/templates/basics/base.html
+++ b/basics/templates/basics/base.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="{% static 'basics/css/event-list.css' %}">
     <link rel="stylesheet" href="{% static 'basics/css/navbar_footer.css' %}">
 	<link rel="stylesheet" href="{% static 'basics/css/startpage.css' %}">
+    <link rel="stylesheet" href="{% static 'basics/css/standard_components.css' %}">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 	<!-- Include all compiled plugins (below), or include individual files as needed -->
 	<script src="{% static 'basics/js/bootstrap.min.js' %}"></script>
