--- a/administration/templates/administration/categories.html
+++ b/administration/templates/administration/categories.html
@@ -46,16 +46,16 @@
                 <div class="modal-body">
                     {% if messages %}
                         {% for message in messages %}
-                            {% if message.message == 'category_not_exists' %}
+                            {% if message.message == 'categorie_not_exists' %}
                                 <div class="form-group">
                                     <div class="error-messages">
-                                        <p>This Category not exists!</p>
+                                        <p>This Category doesn't exist!</p>
                                     </div>
                                 </div>
                             {% endif %}
                         {% endfor %}
                     {% endif %}
-                    <form class="form" role="form" method="post" accept-charset="UTF-8">
+                    <form class="form" role="form" method="GET" accept-charset="UTF-8">
                     {%csrf_token%}
                         <div class="form-group">
                             <input type="name" class="form-control input-lg" placeholder="Category Name" name="name" required/>
