--- a/basics/templates/basics/information_all.html
+++ b/basics/templates/basics/information_all.html
@@ -70,10 +70,13 @@
            <h2 class="title">{{ info.headline }}</h2>
            <p class="desc">{{ info.text }}</p>
           <ul>
-             <li style="width:33%;">comments (3)</li>
-             <li style="width:34%;">write comment<span class="fa fa-question"></span></li>
+             <li style="width:20%;">comments (3)</li>
+             <li style="width:20%;">write comment<span class="fa fa-question"></span></li>
              <li style="width:20%;"><a href="#website"><span class="glyphicon glyphicon-map-marker"></span>Location</a></li>
              <li style="width:20%;"> <span class="glyphicon glyphicon-thumbs-up"></span> Like</li>
+             {% if not user.userdata in info.reported_by.all %}
+                <li style="width:20%;"><a id="report-need" href="{% url 'basics:report_information' pk=info.pk %}">report</a></li>
+                {% endif %}
            </ul>
          </div>
 
