--- a/basics/templates/basics/profil_edit.html
+++ b/basics/templates/basics/profil_edit.html
@@ -28,10 +28,36 @@
 					</div>
 
 					<div class="form-group">
-						 <a class="btn-sm"href="{% url 'basics:change_password' %}">Change password</a> <input type="submit" class="btn btn-block btn-lg btn-primary" value="Save"/>
+					<input type="description" class="form-control input-lg" placeholder= {{ userdata.aux }} name="aux"  >
+					</div>
+
+					<div class="form-group">
+						</div>
+						{% include "basics/map_testing.html" %}
+
+					<p><input type = "checkbox" name="information" {% if userdata.information %} checked {% endif %} onclick=$("#categories").fadeToggle();>
+						<label class="w3-validate"> Inform me via email </label></p>
+
+					<div id="categories" {% if not userdata.information %} style="display: none" {% endif %}>
+
+					<p> Categories I want to be informed about </p>
+						<div style="height: 6em; width: 12em; overflow: auto; padding-left:20px;">
+							{% for categorie in categories %}
+						 		<input id="{{categorie.id}}" type="checkbox" name=categories[] value = "{{categorie.name}}" {% if categorie in selected %} checked {% endif %} />
+ 								<label for="{{categorie.id}}">{{categorie.name}}</label>
+								<br>
+							{% endfor %}
+ 						</div>
+						<br><br>
+					</div>
+
+					<div class="form-group">
+						 <a class="btn-sm"href="{% url 'basics:change_password' %}">Change password</a>
+						<input type="submit" onclick="profil_edit" class="btn btn-block btn-lg btn-primary" value="Save"/>
 					</div>
 				</form>
 			</div>
 		</div>
 	</div>
+
 {% endblock %}
