--- a/administration/templates/administration/groups.html
+++ b/administration/templates/administration/groups.html
@@ -66,12 +66,43 @@
                         <input type="email" class="form-control input-lg" placeholder="Email from Group-User" name="email" required/>
                     </div>
                     <div class="form-group">
-                        <input id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Create"/>
+                        <input name="create_group" id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Create"/>
                     </div>
                 </form>
             </div>
         </div>
     </div><!-- end create new group -->
+
+    <!-- search group -->
+    <div id="standard-modal">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="text-center" id="standard-modal-headline">Search Group</h2>
+            </div>
+            <div class="modal-body">
+                {% if messages %}
+                    {% for message in messages %}
+                        {% if message.message == 'group_not_exists' %}
+                            <div class="form-group">
+                                <div class="error-messages">
+                                    <p>This group doesn't exist!</p>
+                                </div>
+                            </div>
+                        {% endif %}
+                    {% endfor %}
+                {% endif %}
+                <form class="form" role="form" method="POST" accept-charset="UTF-8">
+                {%csrf_token%}
+                    <div class="form-group">
+                        <input type="name" class="form-control input-lg" placeholder="Group Name" name="name" required/>
+                    </div>
+                    <div class="form-group">
+                        <input name="search_group" id="standard-grey-button-bold" type="submit" class="btn btn-block btn-lg btn-primary" value="Search"/>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div><!-- end search group -->
 
 </div><!-- end first column -->
 
@@ -82,22 +113,48 @@
     <div id="standard-modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h2 class="text-center" id="standard-modal-headline">Groups</h2>
+                {% if gro %}
+                    <div class="row">
+                        <div class="col-sm-10">
+                            <h2 class="text-center" id="standard-modal-headline">Groups</h2>
+                        </div>
+                        <div class="col-sm-2">
+                            <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:groups' %}" style="float: right; margin: 15px;"> Show All</a>
+                        </div>
+                    </div>
+                {% else %}
+                    <h2 class="text-center" id="standard-modal-headline">Groups</h2>
+                {% endif %}
             </div>
             <div class="modal-body">
                 <div class="list-group">
-                    {% for group in groups %}
+                    <!-- list the searched category -->
+                    {% if gro %}
                         <div class="list-group-item" id="standard-list-group-item-div">
                             <div class="row">
                                 <div class="col-sm-10">
-                                    {{ group.group.name }}
+                                    {{ gro.name }}
                                 </div>
                                 <div class="col-sm-2">
-                                    <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:group_delete' pk=group.pk %}" title="Delete Group" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+                                    <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:group_delete' pk=gro.pk %}" title="Delete Group" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
                                 </div>
                             </div>
                         </div>
-                    {% endfor %}
+                    <!-- end list the searched category -->
+                    {% else %}
+                        {% for group in groups %}
+                            <div class="list-group-item" id="standard-list-group-item-div">
+                                <div class="row">
+                                    <div class="col-sm-10">
+                                        {{ group.group.name }}
+                                    </div>
+                                    <div class="col-sm-2">
+                                        <a id="standard-grey-button-light" class="btn btn-default btn-sml" href="{% url 'administration:group_delete' pk=group.pk %}" title="Delete Group" style="float: right;"><span class="glyphicon glyphicon-remove"></span> Delete</a>
+                                    </div>
+                                </div>
+                            </div>
+                        {% endfor %}
+                    {% endif %}
                 </div>
             </div>
         </div>
