added 'realy want to leave?' alert if user wants to leave chatpage with input filled

--- a/basics/templates/basics/chat.html
+++ b/basics/templates/basics/chat.html
@@ -115,6 +115,7 @@
           onKeyDown: props.handleKeyDown,
           className: 'mdl-textfield__input',
           type: 'text',
+          id: 'chat-input',
           value: props.inputValue,
           onChange: props.handleChange,
           onBlur: props.handleBlur }),
@@ -398,6 +399,14 @@
 
   ReactDOM.render(React.createElement(App, null), document.getElementById('app'));
 })(React, ReactDOM, window, document, componentHandler);
+
+  window.onbeforeunload = function(){
+    var val = $("#chat-input").val();
+    console.log(val);
+    if($("#chat-input").val() != ""){
+      return 'Are you sure you want to leave?';
+    }
+  };
 </script>
 
   </body>
