work on admin needs; change sonstige to other

--- a/administration/templates/administration/categories.html
+++ b/administration/templates/administration/categories.html
@@ -96,7 +96,7 @@
 							{% if message.message == 'categorie_sonst' %}
 								<div class="form-group">
 									<div class="error-messages">
-    									<p>Cannot delete sonstige!</p>
+    									<p>Cannot delete Other!</p>
 									</div>
 								</div>
 							{% endif %}
