--- a/administration/templates/administration/needs.html
+++ b/administration/templates/administration/needs.html
@@ -52,7 +52,7 @@
 
                             </div>
                             <div class="col-sm-1">
-                                <button type="button" id="{{ request.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right;" onclick=""><span class="glyphicon glyphicon-remove"></span> Delete</button>
+                                <button type="button" id="{{ request.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right;" onclick="done_request(this)"><span class="glyphicon glyphicon-remove"></span> Delete</button>
                             </div>
                         </div>
                     </a>
@@ -173,4 +173,16 @@
      </nav>
    </div>
  </div>
+
+ <script>
+  function done_request(element){
+      var id = element.id;
+      console.log(id);
+      $.post("{% url 'administration:need_delete' %}", {id:id}, function(data){
+          //no need for this method but if we want to get a callback this is the correct position
+          location.href = "{% url 'administration:needs' %}";
+      });
+  }
+
+</script>
 {% endblock %}
