need delete works

--- a/administration/templates/administration/needs.html
+++ b/administration/templates/administration/needs.html
@@ -52,7 +52,7 @@
 
                             </div>
                             <div class="col-sm-1">
-                                <button type="button" id="{{ request.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right;" onclick="done_request(this)"><span class="glyphicon glyphicon-remove"></span> Delete</button>
+                                <button type="button" id="{{ need.id }}" class="btn btn-default btn-sml standard-grey-button-light " href="" style="float: right;" onclick="done_request(this)"><span class="glyphicon glyphicon-remove"></span> Delete</button>
                             </div>
                         </div>
                     </a>
